# swagger.json
@@ -156,6 +156,7 @@
     },
     "/summary": {
       "get": {
+        "operationId": "getWeekSummary",
         "tags": [
           "goals"
         ],
@@ -187,7 +188,8 @@
                           "type": "number"
                         },
                         "total": {
-                          "type": "number"
+                          "type": "number",
+                          "nullable": true
                         },
                         "goalsPerDay": {
                           "type": "object",
@@ -213,7 +215,8 @@
                               ],
                               "additionalProperties": false
                             }
-                          }
+                          },
+                          "nullable": true
                         }
                       },
                       "required": [
